--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Header -->
     <section id="header">
       <div class="inner">
-        <span class="icon solid major fa-cloud"></span>
+        ><img src="images/alligator.jpg" alt=""span></span>
         <h1>
           Hi, I'm <strong>Photon</strong>, another fine<br />
           little freebie from <a href="http://html5up.net">HTML5 UP</a>.
@@ -55,7 +55,9 @@
             </p>
           </div>
           <div class="col-6 col-12-medium imp-medium">
-            <span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+            <span class="image fit"
+              ><img src="images/Document.jpg" alt=""
+            /></span>
           </div>
         </div>
       </div>
@@ -119,7 +121,7 @@
         <p>Ante nunc accumsan et aclacus nascetur ac ante amet sapien sed.</p>
         <div class="row gtr-150">
           <div class="col-4 col-12-medium">
-            <span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
+            <span class="image fit"><img src="images/macleans.webp" alt="" /></span>
             <h3>Magna feugiat lorem</h3>
             <p>
               Adipiscing a commodo ante nunc magna lorem et interdum mi ante
@@ -130,7 +132,7 @@
             </ul>
           </div>
           <div class="col-4 col-12-medium">
-            <span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
+            <span class="image fit"><img src="images/images-1.jpg" alt="" /></span>
             <h3>Magna feugiat lorem</h3>
             <p>
               Adipiscing a commodo ante nunc magna lorem et interdum mi ante
@@ -140,8 +142,8 @@
               <li><a href="#" class="button">More</a></li>
             </ul>
           </div>
-          <div class="col-4 col-12-medium">
-            <span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
+          <div class="col-4 col-12-medium"><span class="image fit"><img src="images/72294923007-paradise-5.webp" alt="" /></span>
+            
             <h3>Magna feugiat lorem</h3>
             <p>
               Adipiscing a commodo ante nunc magna lorem et interdum mi ante
