--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="inner">
         ><img src="images/alligator.jpg" alt=""span></span>
         <h1>
-          Hi, I'm <strong>Photon</strong>, another fine<br />
+          Hi, I'm <strong>Fred</strong>, The Alligator<br />
           little freebie from <a href="http://html5up.net">HTML5 UP</a>.
         </h1>
         <p>
