Added info to the header

--- a/index.html
+++ b/index.html
@@ -24,11 +24,10 @@
         ><img src="images/alligator.jpg" alt=""span></span>
         <h1>
           Hi, I'm <strong>Fred</strong>, The Alligator<br />
-          little freebie from <a href="http://html5up.net">HTML5 UP</a>.
+          <a href=> I live United States from North Carolina to the Rio Grande in Texas.
         </h1>
         <p>
-          Accumsan feugiat mi commodo erat lorem ipsum, sed magna<br />
-          lobortis feugiat sapien sed etiam volutpat accumsan.
+          Alligators are usaully found in fresh water in slow-moving river, swamps, marshals and lakes.
         </p>
         <ul class="actions special">
           <li><a href="#one" class="button scrolly">Discover</a></li>
